# json-typedef-infer

./: Cargo.toml  README.md
src/: lib.rs  main.rs
