[package]
name = "node-jtd-infer"
description = "Generate JSON Typedef schemas from example data"
version = "0.2.1"
license = "MIT"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
jtd = "0.3.1"
serde_json = "1"
anyhow = "1.0"
chrono = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde-wasm-bindgen = "0.6"

[lib]
crate-type = ["cdylib"]
